--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -187,6 +187,7 @@
         "header": "Mod Profile",
         "placeholder": "Select a mod profile...",
         "no_mods_profile": "No mods",
+        "no_profile_found": "The select mod profile was not found.",
         "tooltip": "Choose the mod profile you want to use for this server.\nIf you do not choose anything, your last used profile will be applied.\nTo host Kyber server without any mods, please select No Mods."
       },
       "proxy": {
