add missing translation

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -35,6 +35,7 @@
       "host": "Host Server",
       "mod_profiles": "Mod Profiles",
       "saved_profiles": "Saved Profiles",
+      "installed_mods": "Installed Mods",
       "run_bf2": "Run Battlefront II",
       "cosmetic_mods": "Cosmetic Mods",
       "feedback": "Feedback / Help",
