--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -11,6 +11,7 @@
   "copy_link": "Copy Link",
   "edit": "Edit",
   "start": "Start",
+  "exit": "Exit",
   "delete": "Delete",
   "save": "Save",
   "search": "Search",
