add missing translations

--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -4,6 +4,7 @@
   "back": "Back",
   "continue": "Continue",
   "installed": "Installed",
+  "install": "Install",
   "not_installed": "Not Installed",
   "password": "Password",
   "enter_password": "Enter the server password:",
@@ -16,6 +17,7 @@
   "save": "Save",
   "search": "Search",
   "load": "Load",
+  "ignore": "Ignore",
   "size": "Size",
   "mods": "Mods",
   "login": "Login",
