--- a/assets/i18n/en.json
+++ b/assets/i18n/en.json
@@ -36,6 +36,7 @@
         "items": {
             "server_browser": "Server Browser",
             "host": "Host Server",
+            "events": "Events",
             "mod_profiles": "Mod Profiles",
             "saved_profiles": "Saved Profiles",
             "installed_mods": "Installed Mods",
@@ -223,6 +224,18 @@
                 "tooltip": "When turned on, players will not be able to choose the team they prefer - they will be put into a random team depending on a number of players currently in-game."
             }
         }
+    },
+    "events": {
+        "title": "Events",
+        "no_events": "There are currently no events.",
+        "subscribe": "Subscribe",
+        "unsubscribe": "Unsubscribe",
+        "subscribe_dialog": {
+            "title": "Subscribe to event",
+            "text": "Are you sure you want to subscribe to events and get push notifications?"
+        },
+        "interested": "{count} interested",
+        "view_on_discord": "View on Discord"
     },
     "mod_profiles": {
         "title": "Mod Profiles",
